--- a/index.html
+++ b/index.html
@@ -18,8 +18,61 @@
                 <div class="country-select">
                     <select name="countryCode">
                         <option value="1">🇺🇸 +1 US</option>
-                        <option value="44">🇬🇧 +44 UK</option>
-                        <option value="91">🇮🇳 +91 IN</option>
+<option value="44">🇬🇧 +44 UK</option>
+<option value="91">🇮🇳 +91 IN</option>
+<option value="61">🇦🇺 +61 AU</option>
+<option value="81">🇯🇵 +81 JP</option>
+<option value="49">🇩🇪 +49 DE</option>
+<option value="33">🇫🇷 +33 FR</option>
+<option value="39">🇮🇹 +39 IT</option>
+<option value="86">🇨🇳 +86 CN</option>
+<option value="7">🇷🇺 +7 RU</option>
+<option value="34">🇪🇸 +34 ES</option>
+<option value="31">🇳🇱 +31 NL</option>
+<option value="55">🇧🇷 +55 BR</option>
+<option value="27">🇿🇦 +27 ZA</option>
+<option value="82">🇰🇷 +82 KR</option>
+<option value="90">🇹🇷 +90 TR</option>
+<option value="234">🇳🇬 +234 NG</option>
+<option value="254">🇰🇪 +254 KE</option>
+<option value="353">🇮🇪 +353 IE</option>
+<option value="1">🇨🇦 +1 CA</option>
+<option value="41">🇨🇭 +41 CH</option>
+<option value="972">🇮🇱 +972 IL</option>
+<option value="65">🇸🇬 +65 SG</option>
+<option value="60">🇲🇾 +60 MY</option>
+<option value="62">🇮🇩 +62 ID</option>
+<option value="63">🇵🇭 +63 PH</option>
+<option value="66">🇹🇭 +66 TH</option>
+<option value="974">🇶🇦 +974 QA</option>
+<option value="971">🇦🇪 +971 AE</option>
+<option value="968">🇴🇲 +968 OM</option>
+<option value="965">🇰🇼 +965 KW</option>
+<option value="961">🇱🇧 +961 LB</option>
+<option value="962">🇯🇴 +962 JO</option>
+<option value="20">🇪🇬 +20 EG</option>
+<option value="964">🇮🇶 +964 IQ</option>
+<option value="92">🇵🇰 +92 PK</option>
+<option value="880">🇧🇩 +880 BD</option>
+<option value="84">🇻🇳 +84 VN</option>
+<option value="94">🇱🇰 +94 LK</option>
+<option value="216">🇹🇳 +216 TN</option>
+<option value="213">🇩🇿 +213 DZ</option>
+<option value="212">🇲🇦 +212 MA</option>
+<option value="993">🇹🇲 +993 TM</option>
+<option value="992">🇹🇯 +992 TJ</option>
+<option value="998">🇺🇿 +998 UZ</option>
+<option value="994">🇦🇿 +994 AZ</option>
+<option value="380">🇺🇦 +380 UA</option>
+<option value="375">🇧🇾 +375 BY</option>
+<option value="387">🇧🇦 +387 BA</option>
+<option value="389">🇲🇰 +389 MK</option>
+<option value="381">🇷🇸 +381 RS</option>
+<option value="359">🇧🇬 +359 BG</option>
+<option value="36">🇭🇺 +36 HU</option>
+<option value="40">🇷🇴 +40 RO</option>
+<option value="994">🇦🇿 +994 AZ</option>
+
                     </select>
                 </div>
                 <div class="phone-input">
